--- a/src/styles/components/recipesList.scss
+++ b/src/styles/components/recipesList.scss
@@ -26,7 +26,7 @@
             transition: .1s cubic-bezier(0.165, 0.84, 0.44, 1);
     
             .save-btn {
-                z-index: 50;
+                z-index: 10;
                 @include icon("../../assets/icons8-favorite-50.png", 35px, 40px, 25px, 25px);
                 background-color: $light-color;
                 border-radius: 0 0 $border-radius $border-radius;
@@ -36,6 +36,7 @@
                 position: absolute;
                 right: 5px;
                 transform: translateY(-100%);
+                transition: .15s ease-in-out;
 
                 &:hover {
                     background-color: rgba(#fff, .9);
